# brushless-motor-tester

./: .gitignore  Cargo.toml  Embed.toml  README
.cargo/: config.toml
src/: button_test.rs  current_test.rs  drivers.rs  esc.rs  flash_test.rs  i2c_test.rs  input.rs  m5weight.rs  m5weight_test.rs  main.rs  main_pwm_test.rs  screen_test.rs  ui.rs  voltage.rs  voltage_test.rs
src/drivers/: calibration.rs  current.rs  esc.rs  ui.rs  voltage.rs
