[package]
name = "motor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "motor"
path = "src/main.rs"
test = false
harness = false

[[bin]]
name = "pwm_test"
path = "src/main_pwm_test.rs"
test = false
harness = false

[[bin]]
name = "m5weight_test"
path = "src/m5weight_test.rs"
test = false
harness = false

[[bin]]
name = "button_test"
path = "src/button_test.rs"
test = false
harness = false

[[bin]]
name = "voltage_test"
path = "src/voltage_test.rs"
test = false
harness = false

[[bin]]
name = "current_test"
path = "src/current_test.rs"
test = false
harness = false

[[bin]]
name = "i2c_test"
path = "src/i2c_test.rs"
test = false
harness = false

[[bin]]
name = "screen_test"
path = "src/screen_test.rs"
test = false
harness = false

[[bin]]
name = "flash_test"
path = "src/flash_test.rs"
test = false
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
rtt-target = "0.6"
panic-rtt-target = "0.2"
stm32f7xx-hal = { version = "0.8", features = ["stm32f767", "rt"] }
dshot-frame = "0.2"
fugit = "0.3"
embedded-hal = "0.2.7"
ssd1306 = "0.8.4"
embedded-graphics = "0.8.2"
shared-bus = "0.3.1"
heapless = "0.9.2"
